...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PgR-eK-0tH">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F1u-dv-PTG">
                                                <rect key="frame" x="215" y="17" width="97" height="41"/>
                                                <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="20"/>
                                                <state key="normal" title="New Word">
                                                    <color key="titleColor" red="1" green="0.90193209259999996" blue="0.79013300639999995" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="newWord:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ueA-nj-vi0"/>
                                                </connections>
                                            </button>
...
                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sTv-Bk-8ug">
                                                <rect key="frame" x="257" y="18" width="55" height="41"/>
                                                <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="20"/>
                                                <state key="normal" title="Guess">
                                                    <color key="titleColor" red="1" green="0.90193209259999996" blue="0.79013300639999995" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="guessLetter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="S7n-UW-NOi"/>
                                                </connections>
                                            </button>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d8B-zz-5Mj">
                                                <rect key="frame" x="209" y="18" width="40" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="guessingTextField" label="guessingTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="MB8-IT-fDB"/>
                                                    <constraint firstAttribute="width" constant="40" id="dqo-3I-ftr"/>
                                                </constraints>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
...
